# fiction-translator-v2

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_KR.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
sidecar/: DOCS_EN.md  DOCS_KR.md  alembic.ini  fiction-translator-sidecar.spec  pyproject.toml
sidecar/alembic/: env.py
sidecar/alembic/versions/: 001_initial.py  002_add_character_relationships.py
sidecar/src/fiction_translator/: __init__.py  __main__.py  main.py
sidecar/src/fiction_translator/db/: __init__.py  models.py  session.py
sidecar/src/fiction_translator/ipc/: __init__.py  handlers.py  protocol.py  server.py
sidecar/src/fiction_translator/llm/: providers.py
sidecar/src/fiction_translator/llm/prompts/: character_extraction.py  cot_translation.py  persona_analysis.py  relationship_analysis.py  review.py  (+3 more)
sidecar/src/fiction_translator/pipeline/: __init__.py  callbacks.py  constants.py  edges.py  graph.py  state.py
sidecar/src/fiction_translator/services/: chapter_service.py  export_service.py  glossary_service.py  persona_service.py  project_service.py  relationship_service.py  segment_service.py
sidecar/tests/: test_callbacks.py  test_glossary_extract.py  test_handlers.py  test_paragraph_breaks.py  test_providers.py  test_services.py  test_text_utils.py
src-tauri/: Cargo.toml  DOCS_EN.md  DOCS_KR.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  ipc.rs  lib.rs  main.rs  sidecar.rs  state.rs
(+89 files in other folders)
