[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiction-translator"
version = "0.1.0"
description = "Fiction translation sidecar with LangGraph pipeline"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
bundle = [
    "pyinstaller>=6.0",
]

[project.scripts]
fiction-translator = "fiction_translator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fiction_translator"]

[tool.ruff]
target-version = "py311"
line-length = 100
